commit de alterações

--- a/bd/templates/cadastroDrone.html
+++ b/bd/templates/cadastroDrone.html
@@ -31,9 +31,11 @@
 
                 </div>
                 <!-- /.card-body -->
-
+                  {% for drone in drones %}
+                  <h1>{{ drone }}</h1>>
+                  {% endfor %}
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary" name="btnsalvar">Salvar </button>
+                  <button type="submit" class="btn btn-primary" name="btnsalvar" role="button">Salvar </button>
                 </div>
               </form>
             </div>
