commit de alterações

--- a/bd/templates/base.html
+++ b/bd/templates/base.html
@@ -125,15 +125,9 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="pages/forms/CadastroDrone.html" class="nav-link">
+                                <a href="/visualizarDrone/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Atualizar</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="pages/forms/editors.html" class="nav-link">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Excluir</p>
+                                    <p>Visualizar Drones</p>
                                 </a>
                             </li>
                         </ul>
@@ -351,8 +345,9 @@
                 </div>
             </div>
                 </section>
-        {% endblock %}
+
                 </div>
+     {% endblock %}
                 <!-- /.content-wrapper -->
                 <footer class="main-footer" style="alignment-baseline: bottom">
                     <strong>Aplicação CRUD para disciplina de BDII.</strong>
