commit de alterações

--- a/bd/templates/visualizarDrone.html
+++ b/bd/templates/visualizarDrone.html
@@ -48,8 +48,8 @@
                                         <td>{{ drone.status }} </td>
                                         <td>{{ drone.capacidadeCarga }}</td>
                                             <td>
-                                                <button style="font-size:10px" type="submit" name="btnUpdate" role="button" class="button" href="/updateDrone/">{% icon 'edit' title="Atualizar"%}</button>
-                                                <button style="font-size:10px" type="submit" name="btnUpdate" role="button" class="button">{% icon 'trash' title="Excluir" %}<a href="/updateDrone/"></a></button>
+                                                <a style="font-size:20px" type="submit" name="btnUpdate" role="button" class="button" href="/updateDrone/">{% icon 'edit' title="Atualizar"%}</a>
+                                                <a style="font-size:20px" type="submit" name="btnDelete" role="button" class="button" href="/deleteDrone/">{% icon 'trash' title="Excluir" %}</a>
                                             </td>
 
 
