--- a/bd/templates/AtualizarDrones.html
+++ b/bd/templates/AtualizarDrones.html
@@ -1,4 +1,42 @@
 {% extends 'base.html' %}
 {% block conteudo %}
+     <section class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- left column -->
+          <div class="col-md-6">
+            <!-- general form elements -->
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">Drone</h3>
+              </div>
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form role="form" action="/cadastroDrone/salvarDrone/" method="POST">
+                  {% csrf_token %}
+                <div class="card-body">
+                    <label>Drone {{ drones.idDrone }}</label>
+                  <div class="form-group">
+                      <label>Status Drone</label>
+                      <select class="form-control select2"  style="width: 100%;" name="status">
+                          <option selected="selected">Disponivel</option>
+                          <option>Indisponivel</option>
+                          <option>Manutenção</option>
+                      </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1">Capacidade</label>
+                    <input type="number" class="form-control" id="CapacidadeDrone" placeholder="{{ }}" name="carga">
+                  </div>
+
+                </div>
+                <!-- /.card-body -->
+
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary" name="btnsalvar" role="button"  >Salvar Alterações </button>
+                </div>
+              </form>
+            </div>
+          </div>
 </div>
 {% endblock %}
