--- a/bd/templates/base.html
+++ b/bd/templates/base.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="base.html" class="nav-link">Home</a>
+                <a href="/base/" class="nav-link">Home</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="#" class="nav-link">Contatos</a>
