--- a/bd/templates/base.html
+++ b/bd/templates/base.html
@@ -119,13 +119,13 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="/cadastroDrone/" class="nav-link">
+                                <a href="/newdrone/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Cadastrar</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/visualizarDrone/" class="nav-link">
+                                <a href="/listdrone/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Visualizar Drones</p>
                                 </a>
@@ -141,23 +141,18 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="pages/forms/general.php" class="nav-link">
+                                <a href="/newmercado/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Cadastrar</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="pages/forms/CadastroDrone.html" class="nav-link">
+                                <a href="/listmercado/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Atualizar</p>
+                                    <p>Visualizar</p>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="pages/forms/editors.html" class="nav-link">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Excluir</p>
-                                </a>
-                            </li>
+
                         </ul>
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link">
@@ -166,24 +161,18 @@
                                 Produtos
                                 <i class="fa fa-angle-left right"></i>
                             </p>
-                        </a>
+                        </a>s
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="pages/forms/general.php" class="nav-link">
+                                <a href="/newproduto/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Cadastrar</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="pages/forms/CadastroDrone.html" class="nav-link">
+                                <a href="/listproduto/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Atualizar</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="pages/forms/editors.html" class="nav-link">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Excluir</p>
+                                    <p>Visualizar</p>
                                 </a>
                             </li>
                         </ul>
@@ -197,58 +186,27 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="general.php" class="nav-link">
+                                <a href="newcategoria" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Cadastrar</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="pages/forms/CadastroDrone.html" class="nav-link">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Atualizar</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="pages/forms/editors.html" class="nav-link">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Excluir</p>
-                                </a>
-                            </li>
-                        </ul>
-                    <li class="nav-item has-treeview">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon fa fa-edit"></i>
-                            <p>
-                                Produtos por mercado
-                                <i class="fa fa-angle-left right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="pages/forms/general.php" class="nav-link">
+                                <a href="/listcategoria/" class="nav-link">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Visualizar</p>
                                 </a>
+                            </li>
 
                         </ul>
+
                 </ul>
-                <nav class="mt-2">
-               <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"  data-accordion="false">
-                    <li class="nav-header">APP's</li>
-                     <li class="nav-item">
-                         <a href="pages/calendar.html" class="nav-link">
-                             <i class="nav-icon fa fa-calendar"></i>
-                                 <p>
-                                  Calendar
-                              <span class="badge badge-info right">2</span>
-                                 </p>
-                        </a>
-                </li>
-               </ul>>
+            </nav>
+        </div>
+
 
             <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
+              <!-- /.sidebar -->
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
