--- a/bd/templates/confirm_delete.html
+++ b/bd/templates/confirm_delete.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block conteudo %}
+    <form method="post">
+        {% csrf_token %}
+        <h2>Você tem certeza que deseja remover? ?</h2>
+        <button type="submit">Confirmar</button>
+        <button type="submit" href="/base/">Cancelar</button>
+    </form>
+{% endblock %}
